// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--header"
        >
          <button
            className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Open gallery
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--card-edit-form"
          >
            <div
              className="bx--modal bx--modal-tall temp-json-editor"
              onBlur={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="presentation"
            >
              <span
                className="bx--visually-hidden"
                role="link"
                tabIndex="0"
              >
                Focus sentinel
              </span>
              <div
                aria-label="Edit JSON"
                aria-modal="true"
                className="bx--modal-container"
                role="dialog"
                tabIndex="-1"
              >
                <div
                  className="bx--modal-header"
                >
                  
                  <h3
                    className="bx--modal-header__heading"
                    id="bx--modal-header__heading--modal-1"
                  >
                    Edit JSON
                  </h3>
                  <button
                    aria-label="Close"
                    className="bx--modal-close"
                    onClick={[Function]}
                    title="Close"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      className="bx--modal-close__icon"
                      fill="currentColor"
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  aria-labelledby="bx--modal-header__heading--modal-1"
                  className="bx--modal-content"
                  id="bx--modal-body--modal-1"
                >
                  <div
                    className="bx--form-item"
                  >
                    <label
                      className="bx--label"
                    >
                      Card data
                    </label>
                    <div
                      className="bx--text-area__wrapper"
                      data-invalid={null}
                    >
                      <textarea
                        aria-describedby={null}
                        aria-invalid={null}
                        className="bx--text-area"
                        cols={50}
                        disabled={false}
                        onChange={[Function]}
                        onClick={[Function]}
                        placeholder=""
                        rows={8}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="bx--modal-footer"
                >
                  <button
                    className="bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Save
                  </button>
                </div>
              </div>
              <span
                className="bx--visually-hidden"
                role="link"
                tabIndex="0"
              >
                Focus sentinel
              </span>
            </div>
            <div
              className="iot--card-edit-form--content"
            >
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                >
                  <label
                    className="bx--label"
                    htmlFor="title"
                  >
                    Card title
                  </label>
                  <div
                    className="bx--text-input__field-outer-wrapper"
                  >
                    <div
                      className="bx--text-input__field-wrapper"
                      data-invalid={null}
                      data-warn={null}
                    >
                      <input
                        className="bx--text-input bx--text__input bx--text-input--light"
                        disabled={false}
                        id="title"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="text"
                        value="Calculated"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--input"
              >
                <div
                  className="bx--dropdown__wrapper bx--list-box__wrapper"
                >
                  <label
                    className="bx--label"
                    htmlFor="downshift-0-toggle-button"
                    id="downshift-0-label"
                  >
                    Card size
                  </label>
                  <div
                    className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                    id="size"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-disabled={false}
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-0-label downshift-0-toggle-button"
                      className="bx--list-box__field"
                      disabled={false}
                      id="downshift-0-toggle-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <span
                        className="bx--list-box__label"
                      >
                        MEDIUMTHIN
                      </span>
                      <div
                        className="bx--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height={16}
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <div
                      aria-labelledby="downshift-0-label"
                      className="bx--list-box__menu"
                      id="downshift-0-menu"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseLeave={[Function]}
                      role="listbox"
                      tabIndex={-1}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--card-edit-form--footer"
            >
              <button
                className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Open JSON editor
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                  />
                  <path
                    d="M5.91 15H26.080000000000002V17H5.91z"
                    transform="rotate(-75 15.996 16)"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor interactive 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <pre>
          {
    "title": "New card",
    "size": "SMALL",
    "type": "VALUE",
    "id": "card-1"
}
        </pre>
      </div>
      <div
        style={
          Object {
            "height": "calc(100vh - 6rem)",
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          className="iot--card-editor"
        >
          <div
            className="iot--card-editor--header"
          >
            <button
              className="gallery-button iot--btn bx--btn bx--btn--sm bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Open gallery
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 2v2H2V2h2zm1-1H1v4h4V1zM9 2v2H7V2h2zm1-1H6v4h4V1zM14 2v2h-2V2h2zm1-1h-4v4h4V1zM4 7v2H2V7h2zm1-1H1v4h4V6zM9 7v2H7V7h2zm1-1H6v4h4V6zM14 7v2h-2V7h2zm1-1h-4v4h4V6zM4 12v2H2v-2h2zm1-1H1v4h4v-4zM9 12v2H7v-2h2zm1-1H6v4h4v-4zM14 12v2h-2v-2h2zm1-1h-4v4h4v-4z"
                />
              </svg>
            </button>
          </div>
          <div
            className="iot--card-editor--content"
          >
            <div
              className="iot--card-edit-form"
            >
              <div
                className="bx--modal bx--modal-tall temp-json-editor"
                onBlur={[Function]}
                onClose={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="presentation"
              >
                <span
                  className="bx--visually-hidden"
                  role="link"
                  tabIndex="0"
                >
                  Focus sentinel
                </span>
                <div
                  aria-label="Edit JSON"
                  aria-modal="true"
                  className="bx--modal-container"
                  role="dialog"
                  tabIndex="-1"
                >
                  <div
                    className="bx--modal-header"
                  >
                    
                    <h3
                      className="bx--modal-header__heading"
                      id="bx--modal-header__heading--modal-2"
                    >
                      Edit JSON
                    </h3>
                    <button
                      aria-label="Close"
                      className="bx--modal-close"
                      onClick={[Function]}
                      title="Close"
                      type="button"
                    >
                      <svg
                        aria-label="Close"
                        className="bx--modal-close__icon"
                        fill="currentColor"
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    aria-labelledby="bx--modal-header__heading--modal-2"
                    className="bx--modal-content"
                    id="bx--modal-body--modal-2"
                  >
                    <div
                      className="bx--form-item"
                    >
                      <label
                        className="bx--label"
                      >
                        Card data
                      </label>
                      <div
                        className="bx--text-area__wrapper"
                        data-invalid={null}
                      >
                        <textarea
                          aria-describedby={null}
                          aria-invalid={null}
                          className="bx--text-area"
                          cols={50}
                          disabled={false}
                          onChange={[Function]}
                          onClick={[Function]}
                          placeholder=""
                          rows={8}
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="bx--modal-footer"
                  >
                    <button
                      className="bx--btn bx--btn--secondary"
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Cancel
                    </button>
                    <button
                      className="bx--btn bx--btn--primary"
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Save
                    </button>
                  </div>
                </div>
                <span
                  className="bx--visually-hidden"
                  role="link"
                  tabIndex="0"
                >
                  Focus sentinel
                </span>
              </div>
              <div
                className="iot--card-edit-form--content"
              >
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
                  >
                    <label
                      className="bx--label"
                      htmlFor="title"
                    >
                      Card title
                    </label>
                    <div
                      className="bx--text-input__field-outer-wrapper"
                    >
                      <div
                        className="bx--text-input__field-wrapper"
                        data-invalid={null}
                        data-warn={null}
                      >
                        <input
                          className="bx--text-input bx--text__input bx--text-input--light"
                          disabled={false}
                          id="title"
                          onChange={[Function]}
                          onClick={[Function]}
                          type="text"
                          value="New card"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--card-edit-form--input"
                >
                  <div
                    className="bx--dropdown__wrapper bx--list-box__wrapper"
                  >
                    <label
                      className="bx--label"
                      htmlFor="downshift-1-toggle-button"
                      id="downshift-1-label"
                    >
                      Card size
                    </label>
                    <div
                      className="bx--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
                      id="size"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                    >
                      <button
                        aria-disabled={false}
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-1-label downshift-1-toggle-button"
                        className="bx--list-box__field"
                        disabled={false}
                        id="downshift-1-toggle-button"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <span
                          className="bx--list-box__label"
                        >
                          SMALL
                        </span>
                        <div
                          className="bx--list-box__menu-icon"
                        >
                          <svg
                            aria-label="Open menu"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            name="chevron--down"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                            <title>
                              Open menu
                            </title>
                          </svg>
                        </div>
                      </button>
                      <div
                        aria-labelledby="downshift-1-label"
                        className="bx--list-box__menu"
                        id="downshift-1-menu"
                        onBlur={[Function]}
                        onKeyDown={[Function]}
                        onMouseLeave={[Function]}
                        role="listbox"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--card-edit-form--footer"
              >
                <button
                  className="iot--btn bx--btn bx--btn--sm bx--btn--tertiary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Open JSON editor
                  <svg
                    aria-hidden={true}
                    className="bx--btn__icon"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M31 16L24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16zM1 16L8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16z"
                    />
                    <path
                      d="M5.91 15H26.080000000000002V17H5.91z"
                      transform="rotate(-75 15.996 16)"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor with no card defined (gallery view) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--list iot--list__full-height"
          >
            <div
              className="iot--list-header-container"
            >
              <div
                className="iot--list-header"
              >
                <div
                  className="iot--list-header--title"
                >
                  Gallery
                </div>
                <div
                  className="iot--list-header--btn-container"
                />
              </div>
            </div>
            <div
              className="iot--list--content__full-height iot--list--content"
            >
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item"
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M27,28V6H19V28H15V14H7V28H4V2H2V28a2,2,0,0,0,2,2H30V28ZM13,28H9V16h4Zm12,0H21V8h4Z"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                          title="Simple bar"
                        >
                          Simple bar
                        </div>
                        <div
                          className="iot--list-item--content--row-actions"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                            data-testid="card-gallery-list-BAR-add"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="bx--assistive-text"
                            >
                              Add
                            </span>
                            <svg
                              aria-hidden="true"
                              aria-label="Add"
                              className="bx--btn__icon"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item"
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4.67,28l6.39-12,7.3,6.49a2,2,0,0,0,1.7.47,2,2,0,0,0,1.42-1.07L27,10.9,25.18,10,19.69,21l-7.3-6.49A2,2,0,0,0,10.71,14a2,2,0,0,0-1.42,1L4,25V2H2V28a2,2,0,0,0,2,2H30V28Z"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                          title="Time series line"
                        >
                          Time series line
                        </div>
                        <div
                          className="iot--list-item--content--row-actions"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                            data-testid="card-gallery-list-TIMESERIES-add"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="bx--assistive-text"
                            >
                              Add
                            </span>
                            <svg
                              aria-hidden="true"
                              aria-label="Add"
                              className="bx--btn__icon"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item"
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.6667 27.5027L2 22.4484l1.3311-1.4927 5.6411 5.0316 7.6906-7.4449a1.9282 1.9282 0 012.6736-.0084L22.96 21.9983l5.5791-5.9735L30 17.3905l-5.5812 5.9758a1.996 1.996 0 01-2.8379.08l-3.5765-3.4191-7.666 7.4206A1.9629 1.9629 0 017.6667 27.5027zM30 11L26 11 28 8 30 11zM22 4H18V6h4V8H19v2h3v2H18v2h4a2.0027 2.0027 0 002-2V6A2.0023 2.0023 0 0022 4zM16 14H10V10a2.002 2.002 0 012-2h2V6H10V4h4a2.0023 2.0023 0 012 2V8a2.0023 2.0023 0 01-2 2H12v2h4zM6 12L6 4 4 4 4 5 2 5 2 7 4 7 4 12 2 12 2 14 8 14 8 12 6 12z"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                          title="Value/KPI"
                        >
                          Value/KPI
                        </div>
                        <div
                          className="iot--list-item--content--row-actions"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                            data-testid="card-gallery-list-VALUE-add"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="bx--assistive-text"
                            >
                              Add
                            </span>
                            <svg
                              aria-hidden="true"
                              aria-label="Add"
                              className="bx--btn__icon"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item"
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,14a3,3,0,1,0-3-3A3,3,0,0,0,19,14Zm0-4a1,1,0,1,1-1,1A1,1,0,0,1,19,10Z"
                        />
                        <path
                          d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4Zm0,22H6V20l5-5,5.59,5.59a2,2,0,0,0,2.82,0L21,19l5,5Zm0-4.83-3.59-3.59a2,2,0,0,0-2.82,0L18,19.17l-5.59-5.59a2,2,0,0,0-2.82,0L6,17.17V6H26Z"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                          title="Image"
                        >
                          Image
                        </div>
                        <div
                          className="iot--list-item--content--row-actions"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                            data-testid="card-gallery-list-IMAGE-add"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="bx--assistive-text"
                            >
                              Add
                            </span>
                            <svg
                              aria-hidden="true"
                              aria-label="Add"
                              className="bx--btn__icon"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item"
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M29,5a2,2,0,0,0-2-2H5A2,2,0,0,0,3,5V27a2,2,0,0,0,2,2H27a2,2,0,0,0,2-2ZM27,5V9H5V5Zm0,22H5V23H27Zm0-6H5V17H27Zm0-6H5V11H27Z"
                        />
                      </svg>
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                          title="Data table"
                        >
                          Data table
                        </div>
                        <div
                          className="iot--list-item--content--row-actions"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                            data-testid="card-gallery-list-TABLE-add"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="bx--assistive-text"
                            >
                              Add
                            </span>
                            <svg
                              aria-hidden="true"
                              aria-label="Add"
                              className="bx--btn__icon"
                              fill="currentColor"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
